# toyc

./: dune-project  output.s  toyc_compiler.opam
_build/: .db  .digest-db  log
_build/default/: toyc_compiler.dune-package  toyc_compiler.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: ast.ml  codegen.ml  lex_project.cma  lex_project.cmxa  lex_project.cmxs  lex_project.ml-gen  lexer.ml  lexer.mll  parser.conflicts  parser.ml  parser.mli  parser.mly  parser__mock.ml.mock  parser__mock.mli.inferred
_build/default/lib/.lex_project.objs/: lex_project__Ast.impl.d  lex_project__Lexer.impl.all-deps  lex_project__Lexer.impl.d  lex_project__Semantic.impl.d  parser__mock.impl.all-deps
_build/default/lib/.lex_project.objs/byte/: lex_project.cmi  lex_project.cmo  lex_project.cmt  lex_project__Ast.cmi  lex_project__Ast.cmo  lex_project__Ast.cmt  lex_project__Codegen.cmi  lex_project__Codegen.cmo  lex_project__Codegen.cmt  lex_project__Lexer.cmi  lex_project__Lexer.cmo  lex_project__Lexer.cmt  lex_project__Parser.cmi  lex_project__Parser.cmo  lex_project__Parser.cmt  lex_project__Parser.cmti  lex_project__Semantic.cmi  lex_project__Semantic.cmo  lex_project__Semantic.cmt
_build/default/lib/.lex_project.objs/native/: lex_project.cmx  lex_project__Ast.cmx  lex_project__Codegen.cmx  lex_project__Lexer.cmx  lex_project__Parser.cmx  (+1 more)
_build/default/lib/.merlin-conf/: lib-lex_project
lib/: ast.ml  codegen.ml  codegen_ir.ml  codegen_ir.mli  dune  ir.ml  ir_gen.ml  ir_gen.mli  ir_optimizer.ml  ir_optimizer.mli  parser.mly  semantic.ml
(+3 files in other folders)
